--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "panda": "panda init --postcss",
     "prepare": "panda codegen --clean"
   },
   "dependencies": {
