привел в порядок докер

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,13 +4,10 @@ WORKDIR /app
 
 EXPOSE 3000
 
-COPY package*.json ./
-
-RUN npm config set registry https://registry.npmjs.org/
-RUN npm ci
-RUN npm run panda
-RUN npm run prepare
-
 COPY . .
+
+RUN npm config set registry https://registry.npmjs.org/ \
+&& npm ci \
+&& npm run prepare
 
 CMD [ "npm", "run", "dev" ]
